--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-globe.gl": "^2.36.0",
     "react-icons": "^5.5.0",
-    "tailwindcss": "^4.1.16"
+    "recharts": "^3.3.0",
+    "tailwindcss": "^4.1.16",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
