--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.1",
     "react-globe.gl": "^2.36.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "recharts": "^3.3.0",
     "tailwindcss": "^4.1.16",
     "three": "^0.180.0"
